/*
 * SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package nvidia_ace.animation_id.v1;

message AnimationIds {

  // This is required to track a single animation source (e.g. A2X) request
  // through the animation pipeline. This is going to allow e.g. the controller
  // to stop a request after it has been sent to the animation compositor (e.g.
  // animation graph).
  // Example Value: "8b09637f-737e-488c-872e-e367e058aa15"
  // Note1: The above value is an example UUID (https://en.wikipedia.org/wiki/Universally_unique_identifier)
  // Note2: You don't need to provide specifically a UUID, any text should work, however UUID are recommended
  // for their low chance of collision
  string request_id = 1;

  // The stream id is shared across the animation pipeline and identifies all
  // animation data streams that belong to the same stream. Thus, there will be
  // multiple request all belonging to the same stream. Different user sessions,
  // will usually result in a new stream id. This is required for stateful MSs
  // (e.g. anim graph) to map different requests to the same stream.
  // Example Value: "17f1fefd-3812-4211-94e8-7af1ef723d7f"
  // Note1: The above value is an example UUID (https://en.wikipedia.org/wiki/Universally_unique_identifier)
  // Note2: You don't need to provide specifically a UUID, any text should work, however UUID are recommended
  // for their low chance of collision
  string stream_id = 2;

  // This identifies the target avatar or object the animation data applies to.
  // This is required when there are multiple avatars or objects in the scene.
  // Example Value: "AceModel"
  string target_object_id = 3;
}
//nvidia_ace.animation_id.v1
//v1.0.0