/*
 * SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package nvidia_ace.services.animation_controller.v1;

import "nvidia_ace.controller.v1.proto";
import "nvidia_ace.status.v1.proto";
import "nvidia_ace.animation_id.v1.proto";
import "nvidia_ace.animation_data.v1.proto";
import "nvidia_ace.a2f.v1.proto";
import "google/protobuf/empty.proto";

service AnimationControllerService {
  // First request an ID to communicate with the service.
  rpc RequestAnimationIds(google.protobuf.Empty)
      returns (AnimationIdsOrStatus) {}

  // Then start pulling animation data.
  rpc PullAnimationDataStream(nvidia_ace.animation_id.v1.AnimationIds)
      returns (stream nvidia_ace.animation_data.v1.AnimationDataStream) {}

  // Send audio data as needed.
  rpc PushAudioStream(stream nvidia_ace.a2f.v1.AudioStream)
      returns (nvidia_ace.status.v1.Status) {}

  // Update animation graph variables as needed.
  rpc UpdateAnimationGraphVariable(stream AnimationGraphRequest)
      returns (nvidia_ace.status.v1.Status) {}
}

message AnimationGraphRequest {
  nvidia_ace.animation_id.v1.AnimationIds animation_ids = 1;
  string animation_graph_variable_name = 2;
  string animation_graph_variable_value = 3;
}

message AnimationIdsOrStatus {
  oneof response {
    nvidia_ace.animation_id.v1.AnimationIds animation_ids = 1;
    nvidia_ace.status.v1.Status status = 2;
  }
}
//nvidia_ace.services.animation_controller.v1
//v1.0.0